--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -29,10 +29,22 @@
                                         <a href="/topics/<%=topic.id%>"><%=topic.title%></a>
                                     </h3>
                                 </div>
+                                <div class="card-footer">
+                                    <div class="row">
+                                        <div class="col">
+                                            <div class="block-author">
+                                                <div class="author-info">
+                                                    <div class="author-name">
+                                                        <a href="/topics/<%=topic.id%>"><%=topic.short_description%></a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div> 
-                <% end %>
-                </div> 
+                        </div>
+                <% end %> 
             </div>
         </section>
     </body>
