--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,28 +1,62 @@
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar--bold  navbar-transparent navbar-inverse bg-dark  ">
-  <div class="container navbar-container">
-    <div class="collapse navbar-collapse align-items-center justify-content-end" id="navbar_main">
-      <!-- Navbar links -->
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown megamenu">
-          <a class="nav-link" href="/">
-            Accueil
+<div class="navbar-floating">
+  <div class="container">
+    <div class="header">
+      <!-- Navbar -->
+      <nav class="navbar navbar-expand-lg  navbar-opaque navbar- bg-light ">
+        <div class="container navbar-container">
+          <!-- Brand/Logo -->
+          <a class="navbar-brand" href="../../index.html">
+            <%= image_tag asset_path("logo/logo-1-a.png"), class:"", alt:"Open Air" %>
           </a>
-        </li>
+          <!-- HAMBURGER MENU (WHEN COLLAPSED <-> SMALL SCREEN) -->
+          <div class="d-inline-block">
+            <!-- Navbar toggler  -->
+            <button class="navbar-toggler hamburger hamburger-js hamburger--spring" type="button" data-toggle="collapse" data-target="#navbar_main" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="hamburger-box">
+              <span class="hamburger-inner"></span>
+            </span>
+            </button>
+          </div>
+          <div class="collapse navbar-collapse align-items-center justify-content-around" id="navbar_main">
+            <!-- Navbar links -->
+            <!-- LEFT ALIGNED NAVBAR  -->
+            <ul class="navbar-nav">
+              <% unless (controller_name == "topics" && action_name == "index") %>
+              <li class="nav-item dropdown megamenu">
+                <a class="nav-link" href="/">
+                  Accueil
+                </a>
+              </li>
+              <% end %>
+            </ul>
+            <!-- RIGHT ALIGNED NAVBAR -->
+            <ul class="navbar-nav ml-lg-auto">
+              <li class="nav-item">
+                <% unless user_signed_in? %>
+                <% unless (controller_name == "devise") %>
+                <!-- Sign in button shall not appear when user is  in  the sign in page -->
+                <%= link_to "S'inscrire", new_user_registration_path, class: "nav-link dropdown-item"  %>
+                <% end %>
+                <% else %>
+                <%= link_to "Mon profil", edit_user_registration_path, class: "dropdown-item"  %>
+                <% end %>
+              </li>
+            </ul>
+          </div>
+          <!-- BUTTON CALL TO ACTION LEFT, OUTSIDE HAMBURGER MENU -->
+          <div class="pl-4 d-none d-lg-inline-block">
+            <% unless user_signed_in? %>
+            <% unless (controller_name == "devise") %>
+            <!-- Sign in button shall not appear when user is  in  the sign in page -->
+            <%= link_to "Se connecter", new_user_session_path, class: "btn btn-styled btn-base-1 btn-circle btn-teal-blue", target:"_blank"  %>
+            <% end %>
+            <% else %>
+            <%= button_to "Se déconnecter", destroy_user_session_path, :method => :delete, class: "btn btn-styled btn-base-1 btn-circle btn-teal-blue" %>
+            <% end %>
+          </div>
+        </div>
         
-      </div>
-      <div class="btn-group">
-        
-        <% unless user_signed_in? %>
-        <%= link_to "Se connecter", new_user_session_path, class: "dropdown-item"  %>
-        <%= link_to "S'inscrire", new_user_registration_path, class: "dropdown-item"  %>
-        <% else %>
-        
-        <%= link_to "Mon profil", edit_user_registration_path, class: "dropdown-item"  %>
-        <%= button_to "Se déconnecter", destroy_user_session_path, :method => :delete, class: "dropdown-item" %>
-        
-        <% end %>
-        
-      </div>
-    </nav>
+      </nav>
+    </div>
   </div>
+</div>
