--- a/app/views/devise/registrations/_new_registration_form_fields.html.erb
+++ b/app/views/devise/registrations/_new_registration_form_fields.html.erb
@@ -44,7 +44,7 @@
                                                    
                                                         <div class="col-12">
                                                             <div class="form-group">
-    <%= f.label :email %><br />
+    <%= f.label :Email %><br />
                                                                 <div class="input-group input-group--style-1">
     <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control form-control-lg", placeholder: "Email" %>
                                                                 </div>
