--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -23,9 +23,7 @@
             <ul class="navbar-nav">
               <% unless (controller_name == "topics" && action_name == "index") %>
               <li class="nav-item dropdown megamenu">
-                <a class="nav-link" href="/">
-                  Accueil
-                </a>
+                  <%= link_to "Accueil", root_path, class: "nav-link"  %>
               </li>
               <% end %>
             </ul>
