--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -40,7 +40,14 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div>    
+                                    <div class="col text-right">
+                                        <ul class="inline-links inline-links--style-2">
+                                            <li>
+                                                10 min read
+                                            </li>
+                                        </ul>
+                                    </div> 
                                 </div>
                             </div>
                         </div>
