--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,71 @@
-<h2>Change your password</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+<!-- MAIN WRAPPER -->
+<div class="body-wrap">
+    <section class="slice sct-color-2">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-4">
+                    <div class="card form-card form-card--style-2">
+                        <div class="form-header text-center">
+                            <div class="form-header-icon">
+                                <i class="icon ion-log-in"></i>
+                            </div>
+                        </div>
+                        <div class="form-body">
+                            <div class="text-center px-2">
+                                <h4 class="heading heading-4 strong-400 mb-4">Change your password</h4>
+                            </div>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
+                            <form class="form-default" role="form">
+                                <div class="row">
+                                    <div class="col-12">
+                                      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+                                      <%= render "devise/shared/error_messages", resource: resource %>
+                                      <%= f.hidden_field :reset_password_token %>
+                                        <div class="form-group">
+                                            <%= f.label :password, "New password" %><br />
+                                            <% if @minimum_password_length %>
+                                              <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+                                            <% end %>
+                                            <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+                                        </div>
+                                    </div>
+                                </div>
 
-<%= render "devise/shared/links" %>
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <div class="form-group has-feedback">
+                                            <%= f.label :password_confirmation, "Confirm new password" %><br />
+                                            <%= f.password_field :password_confirmation, autocomplete: "off" %>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                
+                                  <%= f.submit "Change my password", class: "btn btn-styled btn-lg btn-block btn-base-1 mt-4"%>
+                              
+                        </div>
+                    </div>
+                    <% end %>
+                    <!-- Form auxiliary links -->
+                    <div class="form-user-footer-links pt-2">
+                        <div class="row">
+                            <div class="col-6">
+                                <%= render "devise/shared/links" %>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div><!-- END: body-wrap -->
+
+
+
+
+
+
