--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -13,7 +13,7 @@
                         </div>
                         <div class="form-body">
                             <div class="text-center px-2">
-                                <h4 class="heading heading-4 strong-400 mb-4">Change your password</h4>
+                                <h4 class="heading heading-4 strong-400 mb-4">Changez votre mot de passe</h4>
                             </div>
 
                             <form class="form-default" role="form">
@@ -23,7 +23,7 @@
                                       <%= render "devise/shared/error_messages", resource: resource %>
                                       <%= f.hidden_field :reset_password_token %>
                                         <div class="form-group">
-                                            <%= f.label :password, "New password" %><br />
+                                            <%= f.label :password, "Nouveau mot de passe" %><br />
                                             <% if @minimum_password_length %>
                                               <em>(<%= @minimum_password_length %> characters minimum)</em><br />
                                             <% end %>
@@ -35,14 +35,14 @@
                                 <div class="row">
                                     <div class="col-lg-12">
                                         <div class="form-group has-feedback">
-                                            <%= f.label :password_confirmation, "Confirm new password" %><br />
+                                            <%= f.label :password_confirmation, "Confirmer mot de passe" %><br />
                                             <%= f.password_field :password_confirmation, autocomplete: "off" %>
                                         </div>
                                     </div>
                                 </div>
 
                                 
-                                  <%= f.submit "Change my password", class: "btn btn-styled btn-lg btn-block btn-base-1 mt-4"%>
+                                  <%= f.submit "Sauvegarder", class: "btn btn-styled btn-lg btn-block btn-base-1 mt-4"%>
                               
                         </div>
                     </div>
