--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,15 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 <%= devise_error_messages! %>
 <%= render :partial => "devise/registrations/new_registration_form_fields", :locals => { :f => f } %>
-<div class="row align-items-center">
+<div class="form-group">
 	<div class="col-md-12 text-right text-right">
 		<%= f.submit "Inscription", class: "btn btn-styled btn-base-1" %>
 	</div>
 </div>
-
 </div>
 </div>
+</div>
+</div>
+</div>
+</section>
 <% end %>
