--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -33,7 +33,7 @@
                 <% unless user_signed_in? %>
                 <% unless (controller_name == "devise") %>
                 <!-- Sign in button shall not appear when user is  in  the sign in page -->
-                <%= link_to "S'inscrire", new_user_registration_path, class: "nav-link dropdown-item"  %>
+                <%= link_to "S'inscrire", new_user_registration_path(anchor: "top"), class: "nav-link dropdown-item"  %>
                 <% end %>
                 <% else %>
                 <%= link_to "Mon profil", edit_user_registration_path, class: "dropdown-item"  %>
